fixed search bar on mobile

--- a/public/css/dashboard/dashboard.scss
+++ b/public/css/dashboard/dashboard.scss
@@ -168,7 +168,7 @@ body {
       padding: 1px;
     }
     .applicationSingleMessageContainer {
-      flex: 3;
+      flex: 2.5;
       display: flex;
       align-items: center;
       font-size: 12px;
