--- a/public/css/welcome/index.scss
+++ b/public/css/welcome/index.scss
@@ -210,6 +210,7 @@ header {
     }
     .buttonContainer {
       margin-bottom: 0px;
+      justify-content: flex-start;
       button {
         color: white;
         border-top-right-radius: 5px;
